@startuml

/' Puste klasy dla zachowania relacji z innymi modułami '/
class Termin {}
class Pojazd {}
class Pracownik {}

class Klient {

    -idKlienta : string
    -imie : string
    -nazwisko : string
    +pobierzPelneDane() : string 
    +serializuj() : string 
}

class MenedzerZlecen {
    +probaPrzypisaniaPojazdu(Zlecenie& z, shared_ptr<Pojazd> p) : bool
    +probaPrzypisaniaPracownika(Zlecenie& z, shared_ptr<Pracownik> pr) : bool
    +sprawdzDostepnoscZasobow(const Zlecenie& z) : bool 
    +sprawdzUprawnienia(shared_ptr<Pracownik> pr, shared_ptr<Pojazd> p) : bool
    +weryfikujGotowoscDoRealizacji(const Zlecenie& z) : bool
}

abstract class Usluga {
    #dystans : double
    +{abstract} obliczKoszt() : double 
    #nazwaZlecenia : string
    +{abstract} pobierzSzczegoly() : string 
}

class TransportEkspresowy {
    +obliczKoszt() : double 
    -oplataStala : double
    -stawkaEkspresowa : double
    +pobierzSzczegoly() : string 
}

class TransportStandardowy {
    +obliczKoszt() : double 
    -stawkaZaKm : double
    +pobierzSzczegoly() : string 
}

class Zlecenie {
    -okresRealizacji : Termin
    -czyRozliczone : bool
    -objetosc : double
    +obliczPelnyKoszt() : double
    -wymaganaWaga : double
    -klient : shared_ptr<Klient>
    -usluga : shared_ptr<Usluga>
    -idZlecenia : string
    +pobierzPodsumowanie() : string 
    +pobierzStatus() : string
    +serializuj() : string 
    -wymaganaKategoria : string
    -przypisanePojazdy : vector<shared_ptr<Pojazd>>
    -przypisaniPracownicy : vector<shared_ptr<Pracownik>>
    +dodajPojazd(shared_ptr<Pojazd> p) : void
    +dodajPracownika(shared_ptr<Pracownik> pr) : void
    +rozlicz() : void
}

class TransportException {
    +TransportException(const string& message)
}

class InvalidTermException {
    +InvalidTermException(const string& message)
}

class PermissionDeniedException {
    +PermissionDeniedException(const string& message)
}

class ResourceUnavailableException {
    +ResourceUnavailableException(const string& message)
}

/' Relacje '/
Usluga <|-- TransportEkspresowy
Usluga <|-- TransportStandardowy

TransportException <|-- InvalidTermException
TransportException <|-- PermissionDeniedException
TransportException <|-- ResourceUnavailableException

Zlecenie o-- Klient
Zlecenie *-- Termin
Zlecenie o-- Usluga
Zlecenie o-- Pojazd
Zlecenie o-- Pracownik

MenedzerZlecen ..> Zlecenie : uzywa

note right of TransportException
  **Użycie wyjątków do sygnalizowania błędów:**
  Zbudowano hierarchię klas wyjątków dziedziczących
  po bazowym TransportException. Pozwala to na precyzyjne
  przechwytywanie i obsługę konkretnych problemów biznesowych
  (np. brak uprawnień vs niedostępność zasobu) bez zwracania
  kodów błędu.
end note

note bottom of Zlecenie
  **Delegacja (Wzorzec Strategia):**
  Zlecenie posiada relację z klasą abstrakcyjną Usluga.
  Podczas wywołania metody 'obliczPelnyKoszt()', Zlecenie
  deleguje właściwe obliczenia do wstrzykniętego obiektu
  Usluga. Dzięki polimorfizmowi, kalkulacja jest inna
  zależnie od tego, czy użyto usługi ekspresowej czy standardowej.
end note

@enduml